Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Server V2/V3: added manual update request
    Note: the servers normally don't need a manual trigger to perform
    data updates, they listen to metrics changes and events. Use this
    only if you need extraordinary single updates as fast as possible.
  New commands:
    server v2 update [all|modified]     -- Request V2 data update
    server v3 update [all|modified]     -- Request V3 data update

2021-11-22 MWJ  3.2.018  OTA release
- Vehicle: added optional automatic trip report generation
    Details: https://docs.openvehicles.com/en/latest/userguide/notifications.html
  New configs:
    [notify]  report.trip.enable        -- Send trip report on vehicle off (bool, default no)
    [notify]  report.trip.minlength     -- … minimum trip length in km, default 0.2 km
  New command:
    stat trip                           -- Output statistics for current/finished trip
- VW e-Up: added acceleration support; OBD by reading from ECU,
    T26 deriving from speed changes
- Fiat 500e: enhancements courtesy of Gunther Huck
- OTA: Add support for v3.3 hardware (ESP32 rev3)

2021-09-29 MB  3.2.017  OTA release
- Added VEHICLE_POLL_TYPE_ROUTINECONTROL to UDS (ISO 14229) service identifiers list
- MG ZS EV: 
  - Moved to 2 car variants architecture: MG EV A (✔ Zombie mode | ❌ GWM authentication | ❌ Poll BCM) and MG EV B (❌ Zombie mode | ✔ GWM authentication | ✔ Poll BCM)
  - New commands:
      drl [on | off]            Turn on/off daytime running lights
      drlauth [on | off]        (Only for MG EV A) Do BCM authentication then turn on/off daytime running lights
      auth [all | gwm | bcm]    Authenticate with specified ECU
  - New metrics:
      v.e.headlights
      v.e.cooling
      xmg.v.bat.voltage.vcu
      xmg.v.bat.coolant.temp
      xmg.v.bat.resistance
      xmg.v.bms.cell.voltage.max
      xmg.v.bms.cell.voltage.min
      xmg.v.bms.mainrelay.b
      xmg.v.bms.mainrelay.g